<resources xmlns:tools="http://schemas.android.com/tools">
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_new">Add new</string>
    <string name="save">Save</string>
    <string name="log_out">Log out</string>
    <string name="stadiums">Stadiums</string>
    <string name="add_stadium">Add stadium</string>
    <string name="dashboard">Dashboard</string>
    <string name="profile">Profile</string>
    <string name="stadium_name">Stadium name</string>
    <string name="number_player">Number of player</string>
    <string name="price">Price</string>
    <string name="disponibility_from">Disponibiliy from</string>
    <string name="disponibility_to">Disponibility to</string>
    <string name="location">Location</string>
    <string name="description">Description</string>
    <string name="stadium_image">Stadium Image</string>
    <string name="empty"> </string>

    <!-- Error message -->
    <string name="name_error">Please enter a name</string>
    <string name="number_error">Please enter a number</string>
    <string name="price_error">Please enter the price</string>
    <string name="disponibility_error">Please enter a valid time</string>
    <string name="location_error">Please enter the location</string>


    <string name="order_confirmation">Are sure you want delete that item</string>
    <string name="order_confirmation_yes">Yes</string>
    <string name="order_confirmation_no">No</string>


    <string name="edit_profile">Edit Profile</string>
    <string name="something_goes_wrong_s">Something goes wrong</string>


</resources>